--- a/src/App.css
+++ b/src/App.css
@@ -23,16 +23,43 @@
   color: #61dafb;
 }
 
-.nav {
-   color: red !important;
+.navbar {
+   border-top: 3px solid #cccccf;
+   border-bottom: 3px solid #cccccf;
+   margin-bottom: 50px;
+   margin-top: 50px;
 
 }
-navbar-default .navbar-nav > li.test > a { color: red; }
+
+.nav-link{
+   color: black;
+}
 
 .grid-img{
    height:25%;
-   width: 300px;
+   width: 100%;
    padding: 5px;
+}
+
+.character-card{
+   width: 277.5px;
+   height: 25%;
+   padding: 0px;
+   border-radius: 0;
+   border: none;
+}
+
+.character-button {
+   padding: 0px;
+   border: none;
+}
+
+.character-button:hover{
+   opacity: 0.7;
+}
+
+.modal-img {
+   width: 100%;
 }
 
 @keyframes App-logo-spin {
