--- a/src/App.css
+++ b/src/App.css
@@ -231,6 +231,22 @@
    margin-right: auto;
 }
 
+.embed-container {
+   position: relative;
+   padding-bottom: 56.25%;
+   height: 0; overflow: hidden;
+   max-width: 100%;
+   height: auto;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
