--- a/src/App.css
+++ b/src/App.css
@@ -247,6 +247,21 @@
    height: 100%;
 }
 
+.homepage-img{
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+
+.homepage-vid{
+   width: 100%;
+}
+
+.homepage-title{
+   font-family: Accent;
+   font-size: 50px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
